# microservice-fastapi

./: .coverage  Dockerfile  Makefile  README.md  cli-fire.py  main.py  pyproject.toml  render.yaml  test_logic.py  test_main.py
.github/workflows/: devops.yml
mylib/: logic.py
