[project]
name = "fastapi-micro-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi", 
    "uvicorn", 
    "wikipedia==1.4.0",
    "fire==0.7.1", 
    "textblob", 
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.5.0", 
    "ipython", 
    "httpx"
]